# prop-formula

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  main.cpp  prop.cpp  propositionalFormulaClass.cpp  propositionalFormulaFuncs.cpp  propositionalFormulaUtils.cpp  release
etc/: test.cpp  test.h
io/: input.txt
release.dSYM/Contents/: Info.plist
release.dSYM/Contents/Resources/DWARF/: release
source/: class.cpp  class.h  functions.cpp  functions.h  headers.h  utils.cpp  utils.h
tasks/: chromatic_number.cpp  chromatic_number.h  functions.cpp  ramsey.cpp  ramsey.h
